Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <img
           alt="image"
-          src="public/playground_assets/untitled%402x-700h.png"
+          src="public/playground_assets/untitled%402x-1600w.png"
           loading="eager"
           class="home-image1"
         />
