Commit from TeleportHQ

--- a/home1.html
+++ b/home1.html
@@ -90,7 +90,7 @@
         </div>
         <img
           alt="image"
-          src="public/playground_assets/untitled%402x-700h.png"
+          src="https://play.teleporthq.io/static/svg/placeholders/no-image.svg"
           loading="eager"
           class="home1-image1"
         />
