--- a/index.html
+++ b/index.html
@@ -60,81 +60,133 @@
       <link href="./home.css" rel="stylesheet" />
 
       <div class="home-container">
-        <div class="home-main">
-          <span id="serverip" class="home-text">topicalmc.uk</span>
-          <div class="home-background">
-            <img
-              alt="image"
-              src="public/playground_assets/neues%20projekt%5B1%5D-1500w.png"
-              class="home-image"
-            />
-            <video
-              src="public/playground_assets/minecraft_%201.19.2%20-%20singleplayer%202022-10-30%2020-09-04_20.16.44.mp4"
-              loop=""
-              muted=""
-              poster="public/playground_assets/out-filme%20%26%20tv%2030.10.2022%2020_33_52-7500w.png"
-              autoplay=""
-              class="home-video"
-            ></video>
-          </div>
-          <div class="home-slogan">
-            <span class="home-text01">
-              <span>TROPICALMC,</span>
-              <br />
-              <span>A OASIS FULL OF GAMEMODES</span>
-            </span>
-          </div>
-          <div class="home-container1">
-            <span class="home-text05">
-              <span>ABOUT US</span>
-              <br />
-            </span>
-            <span class="home-text08">
-              <span>
-                TropicalMC is a Minecraft server with a variety of gamemodes to
-                keep you entertained. Whether you're in the mood for some
-                competitive
-              </span>
-              <span class="home-text10">PvP action</span>
-              <span>, or just want to relax and play our</span>
-              <span class="home-text12">fantasy mode</span>
-              <span>
-                , we've got you covered. Our friendly community is always happy
-                to help new players, so come join us and see what all the hype
-                is about!
-              </span>
-            </span>
-            <div class="home-container2">
-              <button
-                type="button"
-                onclick="copyClip('serverip')"
-                class="home-playnow button"
-              >
-                <span class="home-text14">
-                  <span>PLAY NOW</span>
-                  <br />
-                </span>
-              </button>
-              <button type="button" class="home-learnmore button">
-                <span class="home-text17">
-                  <span>LEARN MORE</span>
-                  <br />
-                </span>
-              </button>
-              <button type="button" class="home-support button">
-                <span class="home-text20">SUPPORT</span>
-              </button>
+        <div class="home-container01">
+          <div id="main" class="home-main">
+            <span id="serverip" class="home-text">topicalmc.uk</span>
+            <div class="home-background">
+              <img
+                alt="image"
+                src="public/playground_assets/neues%20projekt%5B1%5D-1500w.png"
+                class="home-image"
+              />
+              <video
+                src="public/playground_assets/minecraft_%201.19.2%20-%20singleplayer%202022-10-30%2020-09-04_20.16.44.mp4"
+                loop=""
+                muted=""
+                poster="public/playground_assets/out-filme%20%26%20tv%2030.10.2022%2020_33_52-7500w.png"
+                autoplay=""
+                class="home-video"
+              ></video>
             </div>
-            <a
-              href="https://discord.io/tropical-mc"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="home-endtext"
-            >
-              <span>2022 TROPICALMC ✦</span>
-              <span class="home-text22">discord.io/tropical-mc</span>
+            <div class="home-slogan">
+              <span class="home-text01">
+                <span>TROPICALMC,</span>
+                <br />
+                <span>A OASIS FULL OF GAMEMODES</span>
+              </span>
+            </div>
+            <div class="home-container02">
+              <span class="home-text05">
+                <span>ABOUT US</span>
+                <br />
+              </span>
+              <span class="home-text08">
+                <span>
+                  TropicalMC is a Minecraft server with a variety of gamemodes
+                  to keep you entertained. Whether you're in the mood for some
+                  competitive
+                </span>
+                <span class="home-text10">PvP action</span>
+                <span>, or just want to relax and play our</span>
+                <span class="home-text12">fantasy mode</span>
+                <span>
+                  , we've got you covered. Our friendly community is always
+                  happy to help new players, so come join us and see what all
+                  the hype is about!
+                </span>
+              </span>
+              <div class="home-container03">
+                <button
+                  type="button"
+                  onclick="copyClip('serverip')"
+                  class="home-playnow button"
+                >
+                  <span class="home-text14">
+                    <span>PLAY NOW</span>
+                    <br />
+                  </span>
+                </button>
+                <a href="#learnmore" class="home-learnmore button">
+                  <span class="home-text17">
+                    <span>LEARN MORE</span>
+                    <br />
+                  </span>
+                </a>
+                <button type="button" class="home-support button">
+                  <span class="home-text20">SUPPORT</span>
+                </button>
+              </div>
+              <a
+                href="https://discord.io/tropical-mc"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="home-endtext"
+              >
+                <span>2022 TROPICALMC ✦</span>
+                <span class="home-text22">discord.io/tropical-mc</span>
+                <br />
+              </a>
+            </div>
+          </div>
+          <div id="learnmore" class="home-learnmore1">
+            <h1 class="home-text24">
+              <span>POPULAR + UNIQUE GAMEMODES</span>
               <br />
-            </a>
+            </h1>
+            <span class="home-text27">
+              We offer main-stream gamemodes, but also one's you'll only find
+              here! We have something for everyone!
+            </span>
+            <div class="home-container04">
+              <div class="home-container05">
+                <div class="home-container06"></div>
+                <span class="home-text28">
+                  <span>
+                    Protect your team's bed against others! Respawns are
+                    activated only for those with a bed left.
+                  </span>
+                  <br />
+                </span>
+                <span class="home-title">BEDWARS</span>
+              </div>
+              <div class="home-container07">
+                <div class="home-container08"></div>
+                <span class="home-text31">Mine and PvP!</span>
+                <span class="home-title1">
+                  <span>CAVE PVP</span>
+                  <br />
+                </span>
+              </div>
+              <div class="home-container09">
+                <div class="home-container10"></div>
+                <span class="home-text34">
+                  Battle against monsters and finish quests in a big
+                  fully-detailed open world adventure!
+                </span>
+                <span class="home-title2">FANTASY</span>
+              </div>
+            </div>
+            <span class="home-text35">
+              <span class="home-text36">More gamemodes</span>
+              <span>are already under development!</span>
+              <br />
+            </span>
+            <button class="button">
+              <a href="#main" class="home-link">
+                <span>Back to Top</span>
+                <br />
+              </a>
+            </button>
           </div>
         </div>
       </div>
