Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>TropicalMC</title>
     <meta
       name="description"
-      content="TropicalMC is a minecraft server project, which contains a lot of fun PVP and PVE game modes, that keeps you entertained for hours! Join for free!"
+      content="TropicalMC is a minecraft server project, which contains a lot of fun PVP and PVE game modes, that keeps you entertained for hours! Join now via tropicalmc.uk!"
     />
     <meta property="og:title" content="TropicalMC" />
     <meta
@@ -62,7 +62,7 @@
       <div class="home-container">
         <div class="home-container01">
           <div id="main" class="home-main">
-            <span id="serverip" class="home-text">topicalmc.uk</span>
+            <span id="serverip" class="home-text">tropicalmc.uk</span>
             <div class="home-background">
               <img
                 alt="image"
@@ -72,7 +72,6 @@
               <video
                 src="public/playground_assets/minecraft_%201.19.2%20-%20singleplayer%202022-10-30%2020-09-04_20.16.44.mp4"
                 loop=""
-                muted=""
                 poster="public/playground_assets/out-filme%20%26%20tv%2030.10.2022%2020_33_52-7500w.png"
                 autoplay=""
                 class="home-video"
@@ -107,11 +106,12 @@
               </span>
               <div class="home-container03">
                 <button
+                  id="playnow"
                   type="button"
                   onclick="copyClip()"
                   class="home-playnow button"
                 >
-                  <span class="home-text14">
+                  <span id="playnowtext" class="home-text14">
                     <span>PLAY NOW</span>
                     <br />
                   </span>
@@ -122,9 +122,12 @@
                     <br />
                   </span>
                 </a>
-                <button type="button" class="home-support button">
-                  <span class="home-text20">SUPPORT</span>
-                </button>
+                <a href="#ourteam" class="home-ourteam button">
+                  <span class="home-text20">
+                    <span>OUR TEAM</span>
+                    <br />
+                  </span>
+                </a>
               </div>
               <a
                 href="https://discord.io/tropical-mc"
@@ -133,26 +136,26 @@
                 class="home-endtext"
               >
                 <span>2022 TROPICALMC ✦</span>
-                <span class="home-text22">discord.io/tropical-mc</span>
+                <span class="home-text24">discord.io/tropical-mc</span>
                 <br />
               </a>
             </div>
           </div>
           <div id="learnmore" class="home-learnmore1">
-            <div class="home-container04">
+            <div id="background" class="home-container04">
               <div class="home-gamemodes">
-                <h1 class="home-text24">
+                <h1 class="home-text26">
                   <span>POPULAR + UNIQUE GAMEMODES</span>
                   <br />
                 </h1>
-                <span class="home-text27">
+                <span class="home-text29">
                   We offer main-stream gamemodes, but also one's you'll only
                   find here! We have something for everyone!
                 </span>
                 <div class="home-container05">
                   <div class="home-container06">
                     <div class="home-container07"></div>
-                    <span class="home-text28">
+                    <span class="home-text30">
                       <span>
                         Protect your team's bed against others! Respawns are
                         activated only for those with a bed left.
@@ -163,7 +166,7 @@
                   </div>
                   <div class="home-container08">
                     <div class="home-container09"></div>
-                    <span class="home-text31">Mine and PvP!</span>
+                    <span class="home-text33">Mine and PvP!</span>
                     <span class="home-title1">
                       <span>CAVE PVP</span>
                       <br />
@@ -171,21 +174,21 @@
                   </div>
                   <div class="home-container10">
                     <div class="home-container11"></div>
-                    <span class="home-text34">
+                    <span class="home-text36">
                       Battle against monsters and finish quests in a big
                       fully-detailed open world adventure!
                     </span>
                     <span class="home-title2">FANTASY</span>
                   </div>
                 </div>
-                <span class="home-text35">
-                  <span class="home-text36">More gamemodes</span>
+                <span class="home-text37">
+                  <span class="home-text38">More gamemodes</span>
                   <span>are already under development!</span>
                   <br />
                 </span>
               </div>
               <a href="#main" class="home-scrolltop button">
-                <span class="home-text39">
+                <span class="home-text41">
                   <span>BACK TO TOP</span>
                   <br />
                 </span>
@@ -203,7 +206,7 @@
                     class="home-image1"
                   />
                 </div>
-                <span class="home-text42">
+                <span class="home-text44">
                   <span>
                     To get updates early and engage with our community, join our
                     official discord server.
@@ -221,13 +224,178 @@
                     src="public/playground_assets/20-200938_discord-png-200h.png"
                     class="home-image2"
                   />
-                  <span class="home-text45">
+                  <span class="home-text47">
                     <span>JOIN OUR DISCORD</span>
                     <br />
                   </span>
                 </a>
               </div>
             </div>
+          </div>
+          <div id="ourteam" class="home-ourteam1">
+            <div class="home-container13">
+              <h1 class="home-text50">
+                <span>OUR TEAM</span>
+                <br />
+              </h1>
+              <span class="home-text53">
+                <span>
+                  We are a total of 9 team members, who all share the same
+                  passion about TropicalMC; to create a server everybody is
+                  welcome on.
+                </span>
+                <br />
+              </span>
+              <div class="home-teammembers">
+                <div
+                  class="app-component-container app-component-root-class-name3"
+                >
+                  <img
+                    alt="image"
+                    src="public/playground_assets/0a3518d89f1245e1b70defec41ed38e3-200h.png"
+                    class="app-component-image"
+                  />
+                  <div class="app-component-container1">
+                    <span class="app-component-text">
+                      <span>OWNER Niko</span>
+                    </span>
+                    <span class="app-component-text1">
+                      <span>
+                        I advance the server during the times I'm not taking
+                        care of my cows and chickens.
+                      </span>
+                    </span>
+                  </div>
+                </div>
+                <div class="home-admin">
+                  <div
+                    class="app-component-container app-component-root-class-name"
+                  >
+                    <img
+                      alt="image"
+                      src="public/playground_assets/fxp-200h.png"
+                      class="app-component-image"
+                    />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>ADMIN Fab X Produktion</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>
+                          Living in Germany; working part-time in the film
+                          industry
+                        </span>
+                      </span>
+                    </div>
+                  </div>
+                  <div
+                    class="app-component-container app-component-root-class-name2"
+                  >
+                    <img
+                      alt="image"
+                      src="public/playground_assets/dalle_2022-10-08_19.31.54-200h.png"
+                      class="app-component-image"
+                    />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>ADMIN RichardApps</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>
+                          Self-taught DEV; There will always be something to
+                          improve.
+                        </span>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="home-builder">
+                  <div
+                    class="app-component-container app-component-root-class-name16"
+                  >
+                    <img
+                      alt="image"
+                      src="public/playground_assets/img_2193-200h.jpg"
+                      class="app-component-image"
+                    />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>BUILDER Amazing J H</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>description</span>
+                      </span>
+                    </div>
+                  </div>
+                  <div
+                    class="app-component-container app-component-root-class-name17"
+                  >
+                    <img alt="image" src="" class="app-component-image" />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>BUILDER Madmonkey234</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>description</span>
+                      </span>
+                    </div>
+                  </div>
+                  <div
+                    class="app-component-container app-component-root-class-name18"
+                  >
+                    <img alt="image" src="" class="app-component-image" />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>BUILDER Sscript</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>description</span>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="home-test-supporter">
+                  <div
+                    class="app-component-container app-component-root-class-name14"
+                  >
+                    <img alt="image" src="" class="app-component-image" />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>TEST-SUP Dankskuboi</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>description</span>
+                      </span>
+                    </div>
+                  </div>
+                  <div
+                    class="app-component-container app-component-root-class-name15"
+                  >
+                    <img alt="image" src="" class="app-component-image" />
+                    <div class="app-component-container1">
+                      <span class="app-component-text">
+                        <span>TEST-SUP King</span>
+                      </span>
+                      <span class="app-component-text1">
+                        <span>description</span>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button type="button" class="home-support button">
+                <span class="home-text56">
+                  <span>JOIN OUR TEAM</span>
+                  <br />
+                </span>
+              </button>
+            </div>
+            <a href="#main" class="home-scrolltop1 button">
+              <span class="home-text59">
+                <span>BACK TO TOP</span>
+                <br />
+              </span>
+            </a>
           </div>
         </div>
       </div>
@@ -240,7 +408,11 @@
           window.getSelection().addRange(r);
           document.execCommand('copy');
           window.getSelection().removeAllRanges();
-          console.log("Hello world!");
+          document.getElementById("playnowtext").textContent="SERVER-IP COPIED";
+          setTimeout(playnowBack, 3000);
+      }
+      function playnowBack() {
+      document.getElementById("playnowtext").textContent="PLAY NOW";
       }
     </script>
   </body>
