Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 loop=""
                 poster="public/playground_assets/out-filme%20%26%20tv%2030.10.2022%2020_33_52-7500w.png"
                 autoplay=""
+                muted=""
                 class="home-video"
               ></video>
             </div>
