--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
       data-tag="font"
     />
+    <!--This is the head section-->
+
     <link rel="stylesheet" href="./style.css" />
   </head>
+  <!-- <style> ... </style> -->
+
   <body>
     <div>
       <link href="./home.css" rel="stylesheet" />
@@ -72,9 +76,9 @@
               <video
                 src="public/playground_assets/minecraft_%201.19.2%20-%20singleplayer%202022-10-30%2020-09-04_20.16.44.mp4"
                 loop=""
+                muted=""
                 poster="public/playground_assets/out-filme%20%26%20tv%2030.10.2022%2020_33_52-7500w.png"
                 autoplay=""
-                muted=""
                 class="home-video"
               ></video>
             </div>
@@ -235,161 +239,171 @@
           </div>
           <div id="ourteam" class="home-ourteam1">
             <div class="home-container13">
-              <h1 class="home-text50">
-                <span>OUR TEAM</span>
-                <br />
-              </h1>
-              <span class="home-text53">
-                <span>
-                  We are a total of 9 team members, who all share the same
-                  passion about TropicalMC; to create a server everybody is
-                  welcome on.
-                </span>
-                <br />
-              </span>
-              <div class="home-teammembers">
-                <div
-                  class="app-component-container app-component-root-class-name3"
-                >
-                  <img
-                    alt="image"
-                    src="public/playground_assets/0a3518d89f1245e1b70defec41ed38e3-200h.png"
-                    class="app-component-image"
-                  />
-                  <div class="app-component-container1">
-                    <span class="app-component-text">
-                      <span>OWNER Niko</span>
-                    </span>
-                    <span class="app-component-text1">
-                      <span>
-                        I advance the server during the times I'm not taking
-                        care of my cows and chickens.
-                      </span>
-                    </span>
-                  </div>
-                </div>
-                <div class="home-admin">
-                  <div
-                    class="app-component-container app-component-root-class-name"
-                  >
-                    <img
-                      alt="image"
-                      src="public/playground_assets/fxp-200h.png"
-                      class="app-component-image"
-                    />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>ADMIN Fab X Produktion</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>
-                          Living in Germany; working part-time in the film
-                          industry
-                        </span>
-                      </span>
-                    </div>
-                  </div>
-                  <div
-                    class="app-component-container app-component-root-class-name2"
-                  >
-                    <img
-                      alt="image"
-                      src="public/playground_assets/dalle_2022-10-08_19.31.54-200h.png"
-                      class="app-component-image"
-                    />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>ADMIN RichardApps</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>
-                          Self-taught DEV; There will always be something to
-                          improve.
-                        </span>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="home-builder">
-                  <div
-                    class="app-component-container app-component-root-class-name16"
-                  >
-                    <img
-                      alt="image"
-                      src="public/playground_assets/img_2193-200h.jpg"
-                      class="app-component-image"
-                    />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>BUILDER Amazing J H</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>description</span>
-                      </span>
-                    </div>
-                  </div>
-                  <div
-                    class="app-component-container app-component-root-class-name17"
-                  >
-                    <img alt="image" src="" class="app-component-image" />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>BUILDER Madmonkey234</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>description</span>
-                      </span>
-                    </div>
-                  </div>
-                  <div
-                    class="app-component-container app-component-root-class-name18"
-                  >
-                    <img alt="image" src="" class="app-component-image" />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>BUILDER Sscript</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>description</span>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="home-test-supporter">
-                  <div
-                    class="app-component-container app-component-root-class-name14"
-                  >
-                    <img alt="image" src="" class="app-component-image" />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>TEST-SUP Dankskuboi</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>description</span>
-                      </span>
-                    </div>
-                  </div>
-                  <div
-                    class="app-component-container app-component-root-class-name15"
-                  >
-                    <img alt="image" src="" class="app-component-image" />
-                    <div class="app-component-container1">
-                      <span class="app-component-text">
-                        <span>TEST-SUP King</span>
-                      </span>
-                      <span class="app-component-text1">
-                        <span>description</span>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <button type="button" class="home-support button">
-                <span class="home-text56">
-                  <span>JOIN OUR TEAM</span>
+              <div class="home-container14">
+                <h1 class="home-text50">
+                  <span>OUR TEAM</span>
+                  <br />
+                </h1>
+                <span class="home-text53">
+                  <span>
+                    We are a total of 9 team members, who all share the same
+                    passion about TropicalMC; to create a server everybody is
+                    welcome on.
+                  </span>
                   <br />
                 </span>
-              </button>
+                <div class="home-teammembers">
+                  <div class="teamcard-container teamcard-root-class-name3">
+                    <img
+                      alt="image"
+                      src="public/playground_assets/0a3518d89f1245e1b70defec41ed38e3-200h.png"
+                      class="teamcard-image"
+                    />
+                    <div class="teamcard-container1">
+                      <span class="teamcard-text"><span>OWNER Niko</span></span>
+                      <span class="teamcard-text1">
+                        <span>
+                          I advance the server during the times I'm not taking
+                          care of my cows and chickens.
+                        </span>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="home-admin">
+                    <div class="teamcard-container teamcard-root-class-name">
+                      <img
+                        alt="image"
+                        src="public/playground_assets/fxp-200h.png"
+                        class="teamcard-image"
+                      />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>ADMIN Fab X Produktion</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>
+                            Living in Germany; working part-time in the film
+                            industry
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="teamcard-container teamcard-root-class-name2">
+                      <img
+                        alt="image"
+                        src="public/playground_assets/dalle_2022-10-08_19.31.54-200h.png"
+                        class="teamcard-image"
+                      />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>ADMIN RichardApps</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>
+                            Self-taught DEV; There will always be something to
+                            improve.
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="home-builder">
+                    <div class="teamcard-container teamcard-root-class-name16">
+                      <img
+                        alt="image"
+                        src="public/playground_assets/img_2193-200h.jpg"
+                        class="teamcard-image"
+                      />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>BUILDER Amazing J H</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>
+                            Interested in coding, scripting and building!
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="teamcard-container teamcard-root-class-name17">
+                      <img alt="image" src="" class="teamcard-image" />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>BUILDER Madmonkey234</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>description</span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="teamcard-container teamcard-root-class-name18">
+                      <img alt="image" src="" class="teamcard-image" />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>BUILDER Sscript</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>description</span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="teamcard-container teamcard-root-class-name19">
+                      <img alt="image" src="" class="teamcard-image" />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>BUILDER Flinty</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>description</span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="home-test-supporter">
+                    <div class="teamcard-container teamcard-root-class-name14">
+                      <img
+                        alt="image"
+                        src="public/playground_assets/static-200h.png"
+                        class="teamcard-image"
+                      />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>TEST-SUP Dankskuboi</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>description</span>
+                        </span>
+                      </div>
+                    </div>
+                    <div class="teamcard-container teamcard-root-class-name15">
+                      <img
+                        alt="image"
+                        src="public/playground_assets/screen_shot_2022-08-18_at_11.37.46_am-200w.png"
+                        class="teamcard-image"
+                      />
+                      <div class="teamcard-container1">
+                        <span class="teamcard-text">
+                          <span>TEST-SUP King</span>
+                        </span>
+                        <span class="teamcard-text1">
+                          <span>Always here to help!</span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a
+                  href="https://discord.io/tropical-mc"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="home-support button"
+                >
+                  <span class="home-text56">
+                    <span>JOIN OUR TEAM</span>
+                    <br />
+                  </span>
+                </a>
+              </div>
             </div>
             <a href="#main" class="home-scrolltop1 button">
               <span class="home-text59">
